--- a/application.properties
+++ b/application.properties
@@ -3,9 +3,13 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.types.print.banner=false
 
+
+jwt.secret=${JWT_SECRET:VfbJTwagLbTybf0Wq28UZd8GD1PfbwCg6gZlMblkyeE=}
+jwt.expiration=${JWT_EXPIRATION:3600000}
+jwt.refreshExpiration=${JWT_REFRESH_EXPIRATION:604800000}
 
 
