--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-spring.application.name=clothing-brand
+spring.datasource.url=jdbc:postgresql://localhost:5432/clothingbrand
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.types.print.banner=false
+spring.jpa.properties.hibernate.format_sql=true
+
+
+jwt.secret=${JWT_SECRET:VfbJTwagLbTybf0Wq28UZd8GD1PfbwCg6gZlMblkyeE=}
+jwt.expiration=${JWT_EXPIRATION:3600000}
+jwt.refreshExpiration=${JWT_REFRESH_EXPIRATION:604800000}
+
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.core.env=TRACE
+
