--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.types.print.banner=false
-spring.jpa.properties.hibernate.format_sql=true
 
 
 jwt.secret=${JWT_SECRET:VfbJTwagLbTybf0Wq28UZd8GD1PfbwCg6gZlMblkyeE=}
@@ -14,8 +13,10 @@ jwt.expiration=${JWT_EXPIRATION:3600000}
 jwt.refreshExpiration=${JWT_REFRESH_EXPIRATION:604800000}
 
 
-spring.jpa.show-sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.core.env=TRACE
+admin.bot.adminIds=916948327
 
+admin.bot.token=7672915154:AAHviB5GSKthP6QvIb7vspcoGjWGtzQKy-M
+admin.bot.username=@Obl1v1umAdministrator_bot
+
+# Discord API configuration
+api.discord.secret-key=${DISCORD_API_SECRET:4f3e2d1c-b5a6-48c7-9d8e-f7g6h5j4k3l2}
