--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,9 @@ admin.bot.adminIds=916948327
 admin.bot.token=7672915154:AAHviB5GSKthP6QvIb7vspcoGjWGtzQKy-M
 admin.bot.username=@Obl1v1umAdministrator_bot
 
+# Telegram API configuration for user bot
+telegram.bot.token=7966511776:AAH5rqOuMVme5-irMuHKOk2Od88s97oGCJc
+telegram.bot.username=@obl1vium_bot
+
 # Discord API configuration
 api.discord.secret-key=${DISCORD_API_SECRET:4f3e2d1c-b5a6-48c7-9d8e-f7g6h5j4k3l2}
