user bot update 2.0

--- a/application.properties
+++ b/application.properties
@@ -13,6 +13,6 @@ jwt.expiration=${JWT_EXPIRATION:3600000}
 jwt.refreshExpiration=${JWT_REFRESH_EXPIRATION:604800000}
 
 
-admin.bot.adminIds=825885701,916948327,486377773,979322246
+admin.bot.adminIds=825885701,916948327,486377773,979322246,6133963100
 admin.bot.token=7672915154:AAHviB5GSKthP6QvIb7vspcoGjWGtzQKy-M
 admin.bot.username=@Obl1v1umAdministrator_bot
