--- a/application.properties
+++ b/application.properties
@@ -16,3 +16,6 @@ jwt.refreshExpiration=${JWT_REFRESH_EXPIRATION:604800000}
 admin.bot.adminIds=825885701,916948327,486377773,979322246,6133963100
 admin.bot.token=7672915154:AAHviB5GSKthP6QvIb7vspcoGjWGtzQKy-M
 admin.bot.username=@Obl1v1umAdministrator_bot
+
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.minimum-idle=10
