--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ telegram.bot.username=@obl1vium_bot
 
 # Discord API configuration
 api.discord.secret-key=${DISCORD_API_SECRET:4f3e2d1c-b5a6-48c7-9d8e-f7g6h5j4k3l2}
+
+
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.minimum-idle=10
