--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,44 +1,112 @@
+# ===================================================================
+# ????????? ??????????? ? ???? ?????? PostgreSQL
+# ===================================================================
 spring.datasource.url=jdbc:postgresql://localhost:5432/clothingbrand
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# ===================================================================
+# ????????? JPA ? HIBERNATE (?????????? ?????? ???? ??????)
+# ===================================================================
+# update - ????????????? ????????? ????? ??? ????????? ?????????
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.types.print.banner=false
+# ????????? ?????? SQL-???????? ? ??????? ??? ???????
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-# Включение Flyway для миграций
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-version=0
-
+# ===================================================================
+# JWT ???????????? (?????????????? ? ???????????)
+# ===================================================================
+# ????????? ???? ??? ??????? JWT ???????
 jwt.secret=${JWT_SECRET:VfbJTwagLbTybf0Wq28UZd8GD1PfbwCg6gZlMblkyeE=}
+# ????? ????? access ?????? ? ????????????? (1 ???)
 jwt.expiration=${JWT_EXPIRATION:3600000}
+# ????? ????? refresh ?????? ? ????????????? (7 ????)
 jwt.refreshExpiration=${JWT_REFRESH_EXPIRATION:604800000}
 
-
-admin.bot.adminIds=916948327
-
+# ===================================================================
+# ????????? TELEGRAM ?????
+# ===================================================================
+# ID ????????????? ? ??????? ??????????????
+admin.bot.adminIds=825885701,916948327,486377773,979322246,6133963100
+# ????? ?????????????????? ???? ?? BotFather
 admin.bot.token=7672915154:AAHviB5GSKthP6QvIb7vspcoGjWGtzQKy-M
 admin.bot.username=@Obl1v1umAdministrator_bot
 
-# Telegram API configuration for user bot
+# ????????? ????????????????? ????
 telegram.bot.token=7966511776:AAH5rqOuMVme5-irMuHKOk2Od88s97oGCJc
 telegram.bot.username=@obl1vium_bot
 
-# Discord API configuration
+# ===================================================================
+# ?????????? ? DISCORD
+# ===================================================================
 api.discord.secret-key=${DISCORD_API_SECRET:4f3e2d1c-b5a6-48c7-9d8e-f7g6h5j4k3l2}
 
-
+# ===================================================================
+# ????????? ???? ?????????? HIKARI (?????????????????? ???? ??????)
+# ===================================================================
+# ???????????? ?????????? ?????????? ? ????
 spring.datasource.hikari.maximum-pool-size=50
+# ??????????? ?????????? ?????????? ? ????
 spring.datasource.hikari.minimum-idle=10
+# ??????? ?????????? ? ?????????????
 spring.datasource.hikari.connection-timeout=20000
+# ???????????? ????? ????? ?????????? ? ?????????????
 spring.datasource.hikari.max-lifetime=1800000
+# ????? ??????????? ??????????? ?????????? ? ?????????????
 spring.datasource.hikari.keepalive-time=60000
+# ????? ??????? ?????????? ? ?????????????
 spring.datasource.hikari.idle-timeout=600000
 
+# ===================================================================
+# ??????????? ?????????????????? ???? ??????
+# ===================================================================
+# ????????? ??????????? ?????????????? ????????
 spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+# ?????? ???? ?????????????? ????????
 spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+# ???????????? ?????? SQL ??????? ??? ???????????
 spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+# ????????????? ?????????????? ???????? ?? ??????? ???????
 spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
+
+# ===================================================================
+# ????????? ????????????
+# ===================================================================
+# ???????????? ?????????? ????????? ??????? ?????
+security.login.max-attempts=10
+# ???????????? ?????????? ???????????? ? ??????? ????? ?????????? ?????? ???????
+security.login.block-duration-minutes=5
+# Email ?????????????? ??? ????????? ??????????? ????????????
+security.alert.email.admin-email=admin@example.com
+# ?????????/?????????? ??????????? ?? email
+security.alert.email.enabled=false
+# Email ??? ???????? ??????????? ????????????
+security.alert.email.from=security-alerts@example.com
+
+# ===================================================================
+# ????????? ???????? EMAIL
+# ===================================================================
+spring.mail.host=smtp.yandex.ru
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# ===================================================================
+# ????????? ???????? ???? ??????
+# ===================================================================
+# ?????????? ?????????????? ???????? Flyway
+spring.flyway.enabled=false
+
+# ===================================================================
+# ????????? ???????
+# ===================================================================
+# ????, ?? ??????? ??????????? ?????????? (??????? ? 8080 ?? ?????????)
+server.port=8080
+
+spring.main.allow-circular-references=true
