final adminBot test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -110,3 +110,8 @@ spring.flyway.enabled=false
 server.port=8080
 
 spring.main.allow-circular-references=true
+
+# Legacy API configuration
+api.legacy.deprecation-message=This API endpoint is deprecated. Please use /api/auth/v2 endpoints instead.
+api.legacy.redirect-enabled=false
+api.legacy.direct-implementation=false
