--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,94 +1,123 @@
 # ===================================================================
-# ????????? ??????????? ? ???? ?????? PostgreSQL
+# Настройки логирования
 # ===================================================================
+# Уровень логирования по умолчанию (ERROR, WARN, INFO, DEBUG, TRACE)
+logging.level.root=WARN
+# Уровень логирования для приложения
+logging.level.com.brand.backend=INFO
+# Уровень логирования для Spring
+logging.level.org.springframework=WARN
+# Отключение логирования SQL-запросов
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
+logging.level.org.hibernate.type.descriptor.sql=ERROR
+logging.level.org.hibernate=ERROR
+# Отключение логирования HikariCP
+logging.level.com.zaxxer.hikari=WARN
+
+# ===================================================================
+# Настройки подключения к базе данных PostgreSQL
+# ===================================================================
+# URL подключения к базе данных
 spring.datasource.url=jdbc:postgresql://localhost:5432/clothingbrand
+# Имя пользователя базы данных
 spring.datasource.username=postgres
+# Пароль пользователя базы данных
 spring.datasource.password=root
+# Драйвер для работы с PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===================================================================
-# ????????? JPA ? HIBERNATE (?????????? ?????? ???? ??????)
+# Настройки JPA и Hibernate (управление схемой базы данных)
 # ===================================================================
-# update - ????????????? ????????? ????? ??? ????????? ?????????
-spring.jpa.hibernate.ddl-auto=update
+# create-drop - пересоздаёт все таблицы при запуске приложения
+# update - обновляет структуру таблиц без потери данных
+# validate - только проверяет соответствие сущностей и таблиц
+# none - не выполняет никаких операций со схемой
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Диалект SQL для работы с PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Отключение вывода баннера Hibernate
 spring.jpa.properties.hibernate.types.print.banner=false
-# ????????? ?????? SQL-???????? ? ??????? ??? ???????
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
+# Отключение вывода SQL-запросов в консоль для отладки
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 # ===================================================================
-# JWT ???????????? (?????????????? ? ???????????)
+# JWT аутентификация (авторизационные и защитные токены)
 # ===================================================================
-# ????????? ???? ??? ??????? JWT ???????
+# Секретный ключ для подписи JWT токенов
 jwt.secret=${JWT_SECRET:VfbJTwagLbTybf0Wq28UZd8GD1PfbwCg6gZlMblkyeE=}
-# ????? ????? access ?????? ? ????????????? (1 ???)
+# Время жизни access токена в миллисекундах (1 час)
 jwt.expiration=${JWT_EXPIRATION:3600000}
-# ????? ????? refresh ?????? ? ????????????? (7 ????)
+# Время жизни refresh токена в миллисекундах (7 дней)
 jwt.refreshExpiration=${JWT_REFRESH_EXPIRATION:604800000}
 
 # ===================================================================
-# ????????? TELEGRAM ?????
+# Настройки TELEGRAM ботов
 # ===================================================================
-# ID ????????????? ? ??????? ??????????????
+# ID администраторов в Telegram мессенджере
 admin.bot.adminIds=825885701,916948327,486377773,979322246,6133963100
-# ????? ?????????????????? ???? ?? BotFather
+# Токен администраторского бота от BotFather
 admin.bot.token=7672915154:AAHviB5GSKthP6QvIb7vspcoGjWGtzQKy-M
 admin.bot.username=@Obl1v1umAdministrator_bot
 
-# ????????? ????????????????? ????
+# Настройки пользовательского бота
 telegram.bot.token=7966511776:AAH5rqOuMVme5-irMuHKOk2Od88s97oGCJc
 telegram.bot.username=@obl1vium_bot
 
 # ===================================================================
-# ?????????? ? DISCORD
+# Интеграция с DISCORD
 # ===================================================================
 api.discord.secret-key=${DISCORD_API_SECRET:4f3e2d1c-b5a6-48c7-9d8e-f7g6h5j4k3l2}
 
 # ===================================================================
-# ????????? ???? ?????????? HIKARI (?????????????????? ???? ??????)
+# Настройки пула соединений HIKARI (производительность базы данных)
 # ===================================================================
-# ???????????? ?????????? ?????????? ? ????
+# Максимальное количество соединений в пуле
 spring.datasource.hikari.maximum-pool-size=50
-# ??????????? ?????????? ?????????? ? ????
+# Минимальное количество соединений в пуле
 spring.datasource.hikari.minimum-idle=10
-# ??????? ?????????? ? ?????????????
+# Таймаут соединения в миллисекундах
 spring.datasource.hikari.connection-timeout=20000
-# ???????????? ????? ????? ?????????? ? ?????????????
+# Максимальное время жизни соединения в миллисекундах
 spring.datasource.hikari.max-lifetime=1800000
-# ????? ??????????? ??????????? ?????????? ? ?????????????
+# Время поддержания неактивного соединения в миллисекундах
 spring.datasource.hikari.keepalive-time=60000
-# ????? ??????? ?????????? ? ?????????????
+# Время простоя соединения в миллисекундах
 spring.datasource.hikari.idle-timeout=600000
 
 # ===================================================================
-# ??????????? ?????????????????? ???? ??????
+# Оптимизация производительности базы данных
 # ===================================================================
-# ????????? ??????????? ?????????????? ????????
+# Включение кэширования подготовленных запросов
 spring.datasource.hikari.data-source-properties.cachePrepStmts=true
-# ?????? ???? ?????????????? ????????
+# Размер кэша подготовленных запросов
 spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
-# ???????????? ?????? SQL ??????? ??? ???????????
+# Максимальный размер SQL запроса для кэширования
 spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
-# ????????????? ?????????????? ???????? ?? ??????? ???????
+# Использование подготовленных запросов на стороне сервера
 spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
 
 # ===================================================================
-# ????????? ????????????
+# Настройки безопасности
 # ===================================================================
-# ???????????? ?????????? ????????? ??????? ?????
+# Максимальное количество неудачных попыток входа
 security.login.max-attempts=10
-# ???????????? ?????????? ???????????? ? ??????? ????? ?????????? ?????? ???????
+# Длительность блокировки в минутах после превышения лимита попыток
 security.login.block-duration-minutes=5
-# Email ?????????????? ??? ????????? ??????????? ????????????
+# Email администратора для получения оповещений безопасности
 security.alert.email.admin-email=admin@example.com
-# ?????????/?????????? ??????????? ?? email
+# Включение/отключение оповещений по email
 security.alert.email.enabled=false
-# Email ??? ???????? ??????????? ????????????
+# Email для отправки оповещений безопасности
 security.alert.email.from=security-alerts@example.com
 
 # ===================================================================
-# ????????? ???????? EMAIL
+# Настройки отправки EMAIL
 # ===================================================================
 spring.mail.host=smtp.yandex.ru
 spring.mail.port=587
@@ -98,20 +127,23 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # ===================================================================
-# ????????? ???????? ???? ??????
+# Настройки миграции базы данных
 # ===================================================================
-# ?????????? ?????????????? ???????? Flyway
+# Отключение автоматических миграций Flyway
 spring.flyway.enabled=false
 
 # ===================================================================
-# ????????? ???????
+# Настройки сервера
 # ===================================================================
-# ????, ?? ??????? ??????????? ?????????? (??????? ? 8080 ?? ?????????)
+# Порт, на котором запускается приложение (по умолчанию 8080)
 server.port=8080
 
+# Разрешение циклических зависимостей в Spring
 spring.main.allow-circular-references=true
+# Разрешение переопределения бинов
+spring.main.allow-bean-definition-overriding=true
 
-# Legacy API configuration
+# Настройки устаревшего API
 api.legacy.deprecation-message=This API endpoint is deprecated. Please use /api/auth/v2 endpoints instead.
 api.legacy.redirect-enabled=false
 api.legacy.direct-implementation=false
