--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,32 @@
 logging.level.root=WARN
 logging.level.com.brand.backend=INFO
 logging.level.org.springframework=WARN
-logging.level.org.hibernate.SQL=ERROR
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
-logging.level.org.hibernate.type.descriptor.sql=ERROR
-logging.level.org.hibernate=ERROR
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+logging.level.org.hibernate.type.descriptor.sql=WARN
+logging.level.org.hibernate=INFO
 logging.level.com.zaxxer.hikari=WARN
 
 # ===================================================================
 # Database Configuration
 # ===================================================================
-spring.datasource.url=jdbc:postgresql://localhost:5432/clothingbrand
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/clothingbrand}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:root}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.types.print.banner=false
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
 # ===================================================================
 # RoboKassa Configuration
 # ===================================================================
-robokassa.test-mode=true
-robokassa.merchant-login=demo
-robokassa.test.password1=password_1
-robokassa.test.password2=password_2
+robokassa.test-mode=${ROBOKASSA_TEST_MODE:true}
+robokassa.merchant-login=${ROBOKASSA_MERCHANT_LOGIN:}
+robokassa.test.password1=${ROBOKASSA_TEST_PASSWORD1:}
+robokassa.test.password2=${ROBOKASSA_TEST_PASSWORD2:}
 robokassa.production.password1=${ROBOKASSA_PASSWORD1:}
 robokassa.production.password2=${ROBOKASSA_PASSWORD2:}
 robokassa.payment-url=https://auth.robokassa.ru/Merchant/Index.aspx
@@ -37,28 +37,41 @@ robokassa.hash-algorithm=MD5
 robokassa.culture=ru
 robokassa.encoding=UTF-8
 
-jwt.secret=${JWT_SECRET:VfbJTwagLbTybf0Wq28UZd8GD1PfbwCg6gZlMblkyeE=}
+jwt.secret=${JWT_SECRET:}
 jwt.expiration=${JWT_EXPIRATION:3600000}
 jwt.refreshExpiration=${JWT_REFRESH_EXPIRATION:604800000}
 
-admin.bot.adminIds=825885701,916948327,486377773,979322246,6133963100
-admin.bot.enabled=true
-admin.bot.token=7672915154:AAHviB5GSKthP6QvIb7vspcoGjWGtzQKy-M
-admin.bot.username=@Obl1v1umAdministrator_bot
-telegram.bot.token=7966511776:AAH5rqOuMVme5-irMuHKOk2Od88s97oGCJc
-telegram.bot.username=@obl1vium_bot
+# ===================================================================
+# Admin Bot Configuration (SECURED)
+# ===================================================================
+admin.bot.adminIds=${ADMIN_BOT_ADMIN_IDS:825885701,916948327}
+admin.bot.enabled=${ADMIN_BOT_ENABLED:true}
+admin.bot.token=${ADMIN_BOT_TOKEN:8128109379:AAGULxJJzL9XwG0aCxFbrDMdso4dVvSjndI}
+admin.bot.username=${ADMIN_BOT_USERNAME:@obliviumadministrator_bot}
 
+# ===================================================================
+# User Bot Configuration (SECURED)
+# ===================================================================
+telegram.bot.enabled=${TELEGRAM_BOT_ENABLED:true}
+telegram.bot.token=${TELEGRAM_BOT_TOKEN:7966511776:AAH5rqOuMVme5-irMuHKOk2Od88s97oGCJc}
+telegram.bot.username=${TELEGRAM_BOT_USERNAME:@obl1vium_bot}
+
+# ===================================================================
 # VK Bot Configuration
-vk.access-token=${VK_ACCESS_TOKEN:your_vk_access_token_here}
-vk.group-id=${VK_GROUP_ID:123456789}
-vk.secret-key=${VK_SECRET_KEY:your_vk_secret_key_here}
-vk.confirmation-token=${VK_CONFIRMATION_TOKEN:your_vk_confirmation_token_here}
+# ===================================================================
+vk.access-token=${VK_ACCESS_TOKEN:}
+vk.group-id=${VK_GROUP_ID:}
+vk.secret-key=${VK_SECRET_KEY:}
+vk.confirmation-token=${VK_CONFIRMATION_TOKEN:}
 vk.api-version=5.131
-vk.webhook-url=${VK_WEBHOOK_URL:https://yourdomain.com/api/vk/callback}
+vk.webhook-url=${VK_WEBHOOK_URL:}
 vk.enabled=${VK_BOT_ENABLED:false}
 vk.long-poll-timeout=25
 
-api.discord.secret-key=${DISCORD_API_SECRET:4f3e2d1c-b5a6-48c7-9d8e-f7g6h5j4k3l2}
+# ===================================================================
+# Discord Configuration (SECURED)
+# ===================================================================
+api.discord.secret-key=${DISCORD_API_SECRET:}
 
 spring.datasource.hikari.maximum-pool-size=50
 spring.datasource.hikari.minimum-idle=10
@@ -72,25 +85,43 @@ spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
 spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
 spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
 
+# ===================================================================
+# Security Settings
+# ===================================================================
 security.login.max-attempts=10
 security.login.block-duration-minutes=5
-security.alert.email.admin-email=admin@example.com
-security.alert.email.enabled=false
-security.alert.email.from=security-alerts@example.com
+security.alert.login-failure-threshold=10
+security.alert.time-window-minutes=10
+security.alert.email.admin-email=${ADMIN_EMAIL:}
+security.alert.email.enabled=${EMAIL_ALERTS_ENABLED:false}
+security.alert.email.from=${ALERT_FROM_EMAIL:}
 
-spring.mail.host=smtp.yandex.ru
-spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-spring.flyway.enabled=false
-
-server.port=8080
+# ===================================================================
+# Server Configuration
+# ===================================================================
+server.port=${SERVER_PORT:8080}
 spring.main.allow-circular-references=true
 spring.main.allow-bean-definition-overriding=true
+spring.flyway.enabled=false
 
+# ===================================================================
+# API Configuration
+# ===================================================================
 api.legacy.deprecation-message=This API endpoint is deprecated. Please use /api/auth/v2 endpoints instead.
 api.legacy.redirect-enabled=false
 api.legacy.direct-implementation=false
+
+# Платежные реквизиты для банковских переводов
+payment.cardNumber=5536914012345678
+payment.cardholderName=ООО "ВЕБ ОБЛИВИУМ"
+payment.bankName=Сбербанк России
+
+# ===================================================================
+# Email Configuration (SECURED)  
+# ===================================================================
+spring.mail.host=${MAIL_HOST:smtp.yandex.ru}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:}
+spring.mail.password=${MAIL_PASSWORD:}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
