--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
-HELP.md
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -31,3 +55,15 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Обфускированные JAR файлы - НЕ КОММИТИТЬ!
+*-obfuscated.jar
+*-obfuscated*.jar
+
+# Временные файлы ProGuard
+proguard_map.txt
+proguard_seeds.txt
+proguard_usage.txt
+
+# Логи обфускации
+obfuscation.log
